--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".StudyTablesApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".StudyTablesApplication"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
         <activity android:name=".login.activity.LoginActivity">
@@ -20,7 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".classes.activity.ClassesActivity"></activity>
+        <activity android:name=".classes.activity.ClassesActivity" />
+        <activity
+            android:name=".classes.activity.ClassDetailsActivity"
+            android:label="@string/title_activity_class_details"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".scheduling.model.EventDetailsActivity"></activity>
     </application>
 
 </manifest>
