Created a basic list of a user's classes and relevant hooks.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:name=".classes.activity.ClassDetailsActivity"
             android:label="@string/title_activity_class_details"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".scheduling.model.EventDetailsActivity"></activity>
+        <activity android:name=".scheduling.model.EventDetailsActivity" />
+        <activity android:name=".HomescreenActivity"></activity>
     </application>
 
 </manifest>
